# yolos

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS_REPORT.md  README.md  deploy.bat  deploy.sh  directory_merge_report.md  docker-compose.dev.yml  docker-compose.yml  main.py  organize_project.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci-cd-pipeline.yml
archive/deprecated/: clean_multimodal_gui.py  enhanced_multimodal_gui.py  enhanced_object_recognition_gui.py  fixed_multimodal_gui.py  high_performance_gui.py  object_recognition_gui.py  offline_performance_gui.py  pet_recognition_gui.py  saved_pose_recognition_gui.py  self_learning_demo_gui.py  simple_performance_gui.py  simple_pet_recognition_gui.py  stable_multimodal_gui.py  ultra_performance_gui.py
archive/old_versions/: 0.10.9  0.15.0  1.10.0  1.15.0  1.16.0  1.3.0  1.6.0  10.0.0  2.0.0  2.2.0  2.28.0  3.7.0  4.64.0  6.0  8.1.0
config/: adaptive_roi_application_config.yaml  aiot_platform_config.yaml  c3ghost_embedded_config.yaml  camera_config.json  default_config.yaml  development_config.yaml  external_api_config.yaml  fasttracker_config.py  local_llm_config.yaml  logging.yaml  modelscope_llm_config.yaml  multi_target_recognition_config.yaml  opencv_upgrade_config.yaml  performance_config.yaml  production_config.yaml  requirements.txt  requirements_modelscope.txt  security_config.yaml  self_learning_config.yaml  setup.py  simam_integration_config.yaml  storage_config.yaml  testing_config.yaml  yolov11_optimized.yaml
configs/: default_config.yaml
deployment/: af_fpn_deployment_optimizer.py
deployment/config/: deploy_config.yml  rollback_config.yml
deployment/docker/: docker-compose.optimized.yml  optimized_dockerfile
deployment/scripts/: deploy.py  rollback_recovery_manager.py
deployments/: README.md  embedded_deployment_guide.md
deployments/esp32/: README.md  config.json  main.py  requirements.txt  yolos_esp32.ino
deployments/k230/: README.md  config.json  main.py  requirements.txt
deployments/raspberry_pi/: README.md  config.json  install_rpi.sh  main.py  requirements.txt
docs/: API.md  API_DESIGN_STANDARDS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_OPTIMIZATION_PLAN.md  CONSOLIDATED_DOCUMENTATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STANDARDS.md  Final_Vision_Test_Summary.md  GITHUB_ENHANCEMENTS_IMPLEMENTATION.md  GUI摄像头问题解决方案.md  K230_手持物体识别测试报告.md  PROJECT_REORGANIZATION_COMPLETE.md  PROJECT_REORGANIZATION_PLAN.md  README.md  README_REALISTIC.md  README_YOLOV11_UPGRADE.md  SYSTEM_ARCHITECTURE.md  SimAM_Integration_Guide.md  USER_MANUAL.md  YOLO12_UPGRADE_EVALUATION.md  YOLOS_CAPABILITY_SUMMARY.md  YOLOS_Final_Summary_Report.md  YOLOS_Project_Analysis_Report.md  YOLOS_手持物体识别测试_完整报告.md  YOLOV11_UPGRADE_SUMMARY.md  YOLO_Capability_Analysis.md  YOLO_Latest_Research_and_Optimization_Report.md  aiot_deployment_guide.md  architecture_optimization_summary.md  arduino_integration_complete_guide.md  comprehensive_pretrained_system_summary.md  cross_platform_compatibility_report.md  debug_guide.md  dependency_analysis_report.json  dependency_analysis_report.md  deployment_guide.md  directory_merge_report.md  distance_measurement_guide.md  (+32 more)
docs/archive/: FINAL_MULTIMODAL_SOLUTION.md  (+3 more)
examples/: api_usage_examples.py  basic_detection.py  basic_pet_recognition_gui.py  benchmark_example.py  distance_measurement_example.py  exercise_recognition_example.py  handheld_object_demo.py  mqtt_detection.py  realtime_detection.py  windows_multimodal_debug.py  yolo_evolution_visualizer.py  yolo_optimization_integration.py  yolo_performance_comparison.py
know-how/: computer_vision_debugging_guide.md  face_recognition_best_practices.md  fall_detection_guide.md  hand_gesture_recognition_guide.md  human_pose_estimation_guide.md  project_development_checklist.md
ros_workspace/src/yolos_ros/: CMakeLists.txt  package.xml
ros_workspace/src/yolos_ros/msg/: Detection.msg  DetectionArray.msg
ros_workspace/src/yolos_ros/scripts/: detection_node.py
scripts/: activate_yolos.bat  analyze_dependencies.py  comprehensive_yolos_capability_demo.py  demo_github_enhancements.py  deploy_embedded.py  detection_accuracy_optimizer.py  download_training_datasets.py  embedded_model_evaluator.py  fixed_yolos_capability_demo.py  focused_dependency_check.py  install.py  install_raspberry_pi.sh  install_ros.sh  opencv_upgrade.py  performance_enhancer.py  quick_start_enhanced_training.py  setup_hybrid_system.py  setup_mirrors.py  simple_capability_test.py  simple_dependency_check.py  simple_yolos_prediction_demo.py  start_yolov11_optimized.py  test_yolos_detection_capability.py  test_yolov11_upgrade.py  train_offline_models.py  validate_system.py  visual_yolo_report.py  yolov11_deep_optimization.py  yolov11_integration.py
src/: __init__.py  detector.py  enhanced_test_framework.py  test_framework.py  test_module_imports.py
tests/: __init__.py  aiot_complex_scenario_test_matrix.py  attention_benchmark_report.md  attention_performance_benchmark.py  base_test.py  benchmark_tests.py  comprehensive_scenario_testing.py  comprehensive_test_report_generator.py  comprehensive_test_suite.py  comprehensive_vision_test.py  conftest.py  core_function_complex_path_tester.py  critical_issues_analysis_and_solutions.md  deployment_integration_tester.py  enhanced_integration_tests.py  enhanced_visual_yolo_test.py  final_improvement_validation_report.md  handheld_object_recognition_test.py  handheld_test_fixed.py  hardware_compatibility_tester.py  integration_test.py  k230_handheld_object_test.py  local_handheld_test.py  mock_data.py  performance_stress_boundary_tester.py  performance_test.py  pytest.ini  real_world_validation.py  real_yolo_test.py  run_all_tests.py  run_handheld_test.py  simple_multimodal_gui_test.py  smoke_tests.py  standalone_scenario_validator.py  test_adaptive_roi_application.py  test_aiot_compatibility.py  test_aiot_simple.py  test_aiot_standalone.py  test_applications.py  test_basic_imports.py  (+33 more)
web/: app.py
(+236 files in other folders)
